objects/SolutionPlan__c.object
<CustomObject>
    <description>Solution Plan is a custom object used to record and manage the predefined Products that are used in Account Planning. Solution Plans are linked to the Product object.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Example__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Example</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Solution Plans</relationshipLabel>
        <relationshipName>Solution_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>How to order the categories in the UI</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>SalesSolution__c</referenceTo>
        <relationshipLabel>Solution Plans</relationshipLabel>
        <relationshipName>Solution_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Solution Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Product__c</columns>
        <columns>Solution__c</columns>
        <columns>Example__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Solution Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>